// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartAxes snapshot renders 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    classes={Object {}}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 3,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 100,
          "width": 100,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    rootRef={[Function]}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="myMask"
    >
      <rect
        fill="white"
        height={180}
        width={120}
        x={-10}
        y={-10}
      />
    </mask>
    <g
      id="marks"
      mask="url('#myMask')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 3,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
</div>
`;

exports[`ChartAxes snapshot renders if size is not defined 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    classes={Object {}}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 1,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 480,
          "width": 480,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    rootRef={[Function]}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 480,
            "width": 480,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 1,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 480,
            "width": 480,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="myMask"
    >
      <rect
        fill="white"
        height={560}
        width={500}
        x={-10}
        y={-10}
      />
    </mask>
    <g
      id="marks"
      mask="url('#myMask')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 1,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 480,
              "width": 480,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
</div>
`;

exports[`ChartAxes snapshot renders with chartType property and empty charts property 1`] = `""`;

exports[`ChartAxes snapshot renders without chartType and charts properties 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    classes={Object {}}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 3,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 100,
          "width": 100,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    rootRef={[Function]}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="myMask"
    >
      <rect
        fill="white"
        height={180}
        width={120}
        x={-10}
        y={-10}
      />
    </mask>
    <g
      id="marks"
      mask="url('#myMask')"
    >
      <Bar
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 3,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
</div>
`;

exports[`ChartAxes snapshot renders without chartType property 1`] = `
<div
  className="className"
>
  <div>
    <ToolMenu
      addCategory={[Function]}
      disabled={true}
    />
  </div>
  <WithStyles(Root)
    classes={Object {}}
    graphProps={
      Object {
        "domain": Object {
          "labelStep": 1,
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "getRootNode": [Function],
        "range": Object {
          "labelStep": 3,
          "max": 10,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [Function],
          "y": [Function],
        },
        "size": Object {
          "height": 100,
          "width": 100,
        },
        "snap": Object {
          "x": [Function],
          "y": [Function],
        },
      }
    }
    rootRef={[Function]}
  >
    <WithStyles(Grid)
      columnTickValues={Array []}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      rowTickValues={
        Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
        ]
      }
      xBand={[Function]}
    />
    <WithStyles(RawChartAxes)
      categories={Array []}
      defineChart={false}
      graphProps={
        Object {
          "domain": Object {
            "labelStep": 1,
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "getRootNode": [Function],
          "range": Object {
            "labelStep": 3,
            "max": 10,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [Function],
            "y": [Function],
          },
          "size": Object {
            "height": 100,
            "width": 100,
          },
          "snap": Object {
            "x": [Function],
            "y": [Function],
          },
        }
      }
      leftAxis={true}
      onChange={[Function]}
      onChangeCategory={[Function]}
      top={0}
      xBand={[Function]}
    />
    <mask
      id="myMask"
    >
      <rect
        fill="white"
        height={180}
        width={120}
        x={-10}
        y={-10}
      />
    </mask>
    <g
      id="marks"
      mask="url('#myMask')"
    >
      <Component
        data={Array []}
        defineChart={false}
        graphProps={
          Object {
            "domain": Object {
              "labelStep": 1,
              "max": 1,
              "min": 0,
              "step": 1,
            },
            "getRootNode": [Function],
            "range": Object {
              "labelStep": 3,
              "max": 10,
              "min": 0,
              "step": 1,
            },
            "scale": Object {
              "x": [Function],
              "y": [Function],
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "snap": Object {
              "x": [Function],
              "y": [Function],
            },
          }
        }
        onChange={[Function]}
        onChangeCategory={[Function]}
      />
    </g>
  </WithStyles(Root)>
</div>
`;

exports[`ChartAxes snapshot renders without chartType property and empty charts property 1`] = `""`;
